eks-auto-mode/manifests/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-busybox
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-with-ebs
  template:
    metadata:
      labels:
        app: app-with-ebs
    spec:
      containers:
      - name: app
        image: busybox
        command: ["sh", "-c", "while true; do echo $(date) >> /data/log.txt; sleep 5; done"]
        volumeMounts:
        - name: ebs-storage
          mountPath: /data
      volumes:
      - name: ebs-storage
        persistentVolumeClaim:
          claimName: my-pvc
      nodeSelector:
        nodegroup: basic
